--- a/src/assets/style/_mixins.scss
+++ b/src/assets/style/_mixins.scss
@@ -350,7 +350,7 @@ $BARLINE: 1px;
   }
 }
 //-------------------------------------------------------------
-@mixin aspect_color($prefix: '&.is', $color: __color) {
+@mixin aspect_color($prefix: '&.is') {
   @include __color(success, $prefix);
   @include __color(warn, $prefix);
   @include __color(info, $prefix);
@@ -359,6 +359,8 @@ $BARLINE: 1px;
   @include __color(disable, $prefix);
   @include __color(text, $prefix);
   @include __color(number, $prefix);
+  @include __color(primary, $prefix);
+  @include __color(secondary, $prefix);
 }
 
 //-------------------------------------------------------------
