--- a/src/lib/tile/image/ti-image.scss
+++ b/src/lib/tile/image/ti-image.scss
@@ -29,6 +29,7 @@
     width: 100%;
     height: 100%;
     display: block;
+    object-position: center;
   }
   //-----------------------------------------------
   aside {
