--- a/src/lib/view/wall/ti-wall.scss
+++ b/src/lib/view/wall/ti-wall.scss
@@ -1,2 +1,9 @@
 .ti-wall {
+  //-----------------------------------------------------
+  > .wall-con {
+    display: grid;
+    grid-auto-columns: 1fr;
+    grid-auto-rows: auto;
+  }
+  //-----------------------------------------------------
 }
