--- a/src/lib/tile/image/ti-image.scss
+++ b/src/lib/tile/image/ti-image.scss
@@ -1,6 +1,5 @@
 .ti-image {
-  overflow: hidden;
-  @include aspect_radius('&.r');
+  @include aspect_radius('&.r', '.image-con > img');
   //-----------------------------------------------
   &.is-loading {
     background-color: var(--ti-color-tab);
@@ -23,6 +22,7 @@
     position: relative;
     width: 100%;
     height: 100%;
+    @include flex-center;
   }
   //-----------------------------------------------
   img {
