--- a/src/lib/view/wall/ti-wall.scss
+++ b/src/lib/view/wall/ti-wall.scss
@@ -1,9 +1,13 @@
 .ti-wall {
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   //-----------------------------------------------------
   > .wall-con {
     display: grid;
     grid-auto-columns: 1fr;
     grid-auto-rows: auto;
+
   }
   //-----------------------------------------------------
 }
