--- a/src/lib/view/table/style/table-cell.scss
+++ b/src/lib/view/table/style/table-cell.scss
@@ -102,7 +102,7 @@
   //
   > .table-cell-wrapper {
     @include flex-align-nowrap($ai: stretch);
-    > .ti-input-box {
+    > .ti-input-box, .prefix-suffix-box {
       flex: 1 1 auto;
     }
     > .ti-icon {
