--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -36,7 +36,7 @@
   --ti-color-primary-r: #d0e7fc;
   --ti-color-secondary: #ff4081;
   --ti-color-secondary-b: #f86999;
-  --ti-color-secondary-r: #fff;
+  --ti-color-secondary-r: #ffdae6;
   --ti-color-success: #4caf50;
   --ti-color-success-b: #56a358;
   --ti-color-success-r: #cfc;
