--- a/src/lib/view/table/style/table-color.scss
+++ b/src/lib/view/table/style/table-color.scss
@@ -1,3 +1,5 @@
+@use '../../../../assets/style/_all.scss' as *;
+
 @mixin __table_color($prefix, $name) {
   #{$prefix}.is-#{$name} {
     color: var(--ti-color-#{$name});
