--- a/src/lib/shelf/block/ti-block.scss
+++ b/src/lib/shelf/block/ti-block.scss
@@ -1,3 +1,5 @@
+@use '@site0/tijs/sass/_all.scss' as *;
+
 .ti-block {
   display: grid;
   //-----------------------------------------------------------
