--- a/src/lib/shelf/grid-fields/style/gf-it-label.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-label.scss
@@ -1,3 +1,5 @@
+@use '@site0/tijs/sass/_all.scss' as *;
+
 .ti-grid-fiels-item.part-label {
   &.as-info-box {
     background-color: var(--ti-color-border-shallow);
