--- a/src/lib/tile/image/ti-image.scss
+++ b/src/lib/tile/image/ti-image.scss
@@ -1,3 +1,5 @@
+@use '@site0/tijs/sass/_all.scss' as *;
+
 .ti-image {
   @include aspect_radius('&.r', '.image-con > img');
   //-----------------------------------------------
