--- a/src/lib/view/process/ti-process.scss
+++ b/src/lib/view/process/ti-process.scss
@@ -1,3 +1,5 @@
+@use '@site0/tijs/sass/_all.scss' as *;
+
 .ti-process {
   @include flex-align-v-nowrap($jc: center);
   //-------------------------------------------------------
