--- a/src/lib/input/combo-filter/ti-combo-filter.scss
+++ b/src/lib/input/combo-filter/ti-combo-filter.scss
@@ -1,3 +1,5 @@
+@use '@site0/tijs/sass/_all.scss' as *;
+
 .ti-combo-filter {
   //---------------------------------------
   .part-sorter.ti-sorter {
