--- a/src/lib/action/actionbar/style/bar-item-info.scss
+++ b/src/lib/action/actionbar/style/bar-item-info.scss
@@ -22,6 +22,7 @@
   .item-text {
     white-space: nowrap;
     padding: 0.2em 0.5em;
+    @include flex-align-nowrap($ai: center);
   }
   //-----------------------------------------------------
   .item-suffix {
