--- a/src/lib/tile/upload-bar/ti-upload-bar.scss
+++ b/src/lib/tile/upload-bar/ti-upload-bar.scss
@@ -14,6 +14,7 @@
       font-size: 1.3em;
       background-color: var(--ti-color-border-shallow);
       padding: 0 4px;
+      min-width: 1.8em;
     }
     //-----------------------------------------------
     > .part-text {
