--- a/src/lib/action/actionbar/style/bar-item-info.scss
+++ b/src/lib/action/actionbar/style/bar-item-info.scss
@@ -16,7 +16,7 @@
     @include flex-center;
     font-size: var(--ti-measure-menu-iconsz);
     width: var(--ti-measure-menu-iconsz);
-    margin-left: .42em;
+    margin: 0 0.3em;
   }
   //-----------------------------------------------------
   .item-text {
