--- a/src/lib/tile/upload-bar/ti-upload-bar.scss
+++ b/src/lib/tile/upload-bar/ti-upload-bar.scss
@@ -10,15 +10,38 @@
     @include flex-align-nowrap($ai: stretch);
     flex: 1 1 auto;
     height: 3em;
-    border: 1px solid var(--ti-color-border-thin);
+    border: 1px solid var(--bar-c0);
     overflow: hidden;
     //-----------------------------------------------
     > .part-icon {
       @include flex-center;
       flex: 0 0 auto;
       font-size: 1.3em;
-      background-color: var(--ti-color-border-shallow);
+      background-color: var(--bar-bg);
+      color: var(--bar-c0);
       width: 2em;
+      position: relative;
+      .prefix-cleaner {
+        @include flex-center;
+        position: absolute;
+        inset: 0;
+        background-color: var(--bar-action);
+        color: var(--ti-bar-action-r);
+        opacity: 1;
+        transition: opacity 0.3s;
+        cursor: pointer;
+        > i {
+          transition: transform 0.3s;
+          opacity: 0;
+        }
+        &:hover {
+          opacity: 1;
+          > i {
+            opacity: 1;
+            transform: rotate(180deg) scale(1.3);
+          }
+        }
+      }
     }
     //-----------------------------------------------
     > .part-text {
@@ -46,7 +69,7 @@
     > .part-progress {
       position: absolute;
       inset: 0;
-      padding: 0 1em;
+      padding: 0 3em;
       background-color: var(--ti-color-mask-thin);
     }
     //-----------------------------------------------
@@ -82,30 +105,5 @@
     //   border-color: var(--ti-color-secondary);
     // }
   }
-  //-----------------------------------------------
-  @mixin __color($name) {
-    &.is-#{$name} > .bar-con {
-      color: var(--ti-color-#{$name});
-      border-color: var(--ti-color-#{$name});
-      > .part-icon {
-        color:inherit;
-        background-color: var(--ti-color-#{$name}-r);
-      }
-      > .part-actions {
-        background-color: var(--ti-color-#{$name}-r);
-      }
-    }
-  }
-  //-----------------------------------------------
-  @include __color(success);
-  @include __color(warn);
-  @include __color(info);
-  @include __color(danger);
-  @include __color(track);
-  @include __color(disable);
-  @include __color(text);
-  @include __color(number);
-  @include __color(primary);
-  @include __color(secondary);
   //-----------------------------------------------
 }
