--- a/src/lib/view/list/ti-list.scss
+++ b/src/lib/view/list/ti-list.scss
@@ -61,6 +61,11 @@
           div.new-row {
             width: 100%;
           }
+          .as-index {
+            color: var(--ti-color-track);
+            margin-right: .5em;
+            font-size: 0.8em;
+          }
           .as-tag {
             font-size: 10px;
             display: block;
