InputBox v2 almost done for coding

--- a/src/assets/style/measure/comfy.scss
+++ b/src/assets/style/measure/comfy.scss
@@ -25,6 +25,12 @@
   --ti-gap-b: 12px; // big
   --ti-gap-h: 16px; // hug
 
+  --ti-box-pad-t: 0.1em; // tiny
+  --ti-box-pad-s: 0.2em; // small
+  --ti-box-pad-m: 0.4em; // middle
+  --ti-box-pad-b: 0.8em; // big
+  --ti-box-pad-h: 1.5em; // hug
+
   --ti-fontsz-page: 14px;
   --ti-fontsz-box: 12px;
   --ti-fontsz-label: 1em;
