--- a/src/lib/input/box2/ti-input-box2.scss
+++ b/src/lib/input/box2/ti-input-box2.scss
@@ -8,15 +8,16 @@
     line-height: 1.1em;
   }
   //-----------------------------------------------------
-  > .part-main {
+  > main {
     overflow: hidden;
     border: 1px solid #ccc;
-    @include flex-align-nowrap;
-    font-size: 18px;
+    @include flex-align-nowrap($ai: stretch);
+    font-size: var(--box-fontsz);
+    border-radius: var(--box-radius);
     //---------------------------------------------------
     > input {
       flex: 1 1 auto;
-      padding: 0.6em;
+      padding: var(--box-padding);
       outline: none;
       border: 0;
       font-size: inherit;
@@ -36,6 +37,38 @@
       border-color: var(--ti-color-primary);
       background-color: var(--ti-color-highlight);
       color: var(--ti-color-highlight-f);
+    }
+    //---------------------------------------------------
+    > .icon-part {
+      width: calc(var(--box-fontsz) * 1.6);
+      position: relative;
+      i {
+        @include flex-center;
+        text-align: center;
+        position: absolute;
+        inset: 0;
+        font-size: calc(var(--box-fontsz) * 1.2);
+        transition: transform 0.6s, opacity 0.3s;
+      }
+      &.can-hover {
+        cursor: pointer;
+        i:first-child {
+          opacity: 1;
+        }
+        i:last-child {
+          opacity: 0;
+        }
+        &:hover {
+          i:first-child {
+            opacity: 0;
+            transform: rotate(360deg);
+          }
+          i:last-child {
+            opacity: 1;
+            transform: rotate(360deg);
+          }
+        }
+      }
     }
     //---------------------------------------------------
   } // > .part-main {
@@ -87,7 +120,7 @@
           }
         }
       }
-    }  // > .part-options-con {
+    } // > .part-options-con {
   }
   //-----------------------------------------------------
 }
