--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -52,9 +52,9 @@
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
-  --ti-color-disable: rgba(10, 10, 10, 0.1);
-  --ti-color-disable-b: #d5d5d5;
-  --ti-color-disable-r: rgba(10, 10, 10, 0.4);
+  --ti-color-disable: rgba(10, 10, 10, 0.2);
+  --ti-color-disable-b: rgba(10, 10, 10, 0.1);
+  --ti-color-disable-r: #e0e0e0;
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
   --ti-color-text-r: #ecc4e3;
