--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -52,9 +52,9 @@
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
-  --ti-color-disable: #aaa;
-  --ti-color-disable-b: #aaa;
-  --ti-color-disable-r: #f0f0f0;
+  --ti-color-disable: #888;
+  --ti-color-disable-b: #888;
+  --ti-color-disable-r: rgba(20, 20, 20, 0.1);
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
   --ti-color-text-r: #ecc4e3;
