--- a/src/lib/input/box2/ti-input-box2.scss
+++ b/src/lib/input/box2/ti-input-box2.scss
@@ -7,6 +7,7 @@
   --box-color-focus-border: var(--ti-color-primary);
   --box-color-focus-text: var(--ti-color-highlight-f);
   --box-color-focus-bg: var(--ti-color-highlight);
+  @include flex-align-nowrap($ai: stretch);
   //-----------------------------------------------------
   > aside {
     @include font-fixed;
@@ -16,6 +17,7 @@
   //-----------------------------------------------------
   > .part-main {
     @include flex-align-nowrap($ai: stretch);
+    flex:1 1 auto;
     //---------------------------------------------------
     > .box-part {
       flex: 1 1 auto;
