--- a/src/lib/shelf/grid-fields/style/gf-it-label.scss
+++ b/src/lib/shelf/grid-fields/style/gf-it-label.scss
@@ -11,4 +11,10 @@
     border-bottom: 1px solid var(--ti-color-border-shallow);
     margin: 0.6em 0;
   }
+  .as-label-title {
+    @include flex-align($ai: center, $ac: center);
+    > .ti-icon:first-child {
+      margin-right: 0.3em;
+    }
+  }
 }
