--- a/src/lib/tile/label/ti-label.scss
+++ b/src/lib/tile/label/ti-label.scss
@@ -1,22 +1,87 @@
 @use '@site0/tijs/sass/_all.scss' as *;
 
 .ti-label {
-  @include flex-align-nowrap($ai: stretch);
+  @include flex-align-nowrap($ai: center);
+  //-----------------------------------------------
   min-height: var(--ti-measure-box-height);
+  font-size: var(--box-fontsz);
+  border-radius: var(--box-radius);
+  background-color: var(--box-color-bg);
+  color: var(--box-color-text);
+  border-color: var(--box-color-border);
+  //-----------------------------------------------
+  // border
+  //-----------------------------------------------
+  &.show-border {
+    border: 1px solid var(--box-color-border);
+  }
   //-----------------------------------------------
   // 空值
   //-----------------------------------------------
   &.nil-value {
-    opacity: 0.62;
-    font-style: italic;
+    >.value-part {
+      opacity: 0.62;
+      font-style: italic;
+    }
   }
   //-----------------------------------------------
   // 不可换行
   //-----------------------------------------------
   &.is-nowrap > .value-part {
+    white-space: nowrap;
     overflow: hidden;
     text-overflow: ellipsis;
-    display: block;
-    margin: auto 0;
   }
+  //-----------------------------------------------
+  // 主体文字
+  //-----------------------------------------------
+  > .value-part {
+    //@include flex-align-nowrap($ai: center);
+    flex: 1 1 auto;
+    text-align: var(--box-align);
+    line-height: 1.2em;
+    padding: 0 .5em;
+    padding: var(--box-padding);
+    margin: 0;
+  }
+  //-----------------------------------------------
+  // 前后图标
+  //-----------------------------------------------
+  > .icon-part {
+    flex: 0 0 auto;
+    width: calc(var(--box-fontsz) * 1.8);
+    position: relative;
+    align-self: stretch;
+    > i {
+      @include flex-center;
+      text-align: center;
+      position: absolute;
+      inset: 0;
+      font-size: calc(var(--box-fontsz) * 1.2);
+      transition: transform 0.6s, opacity 0.3s;
+    }
+    &.can-hover {
+      cursor: pointer;
+      i:first-child {
+        opacity: 1;
+      }
+      i:last-child {
+        opacity: 0;
+      }
+      &:hover {
+        color: var(--box-color-hover-icon);
+        background-color: var(--box-color-hover-icon-bg);
+        i:first-child {
+          opacity: 0;
+        }
+        i:last-child {
+          opacity: 1;
+        }
+      }
+      &.can-rotate:hover i {
+        transform: rotate(360deg);
+      }
+    }
+  }
+  //-----------------------------------------------
 }
