--- a/src/lib/input/transfer/ti-transfer.scss
+++ b/src/lib/input/transfer/ti-transfer.scss
@@ -68,8 +68,8 @@
         //...................................................
         &.is-disabled {
           cursor: default;
-          background-color: var(--ti-color-disable);
-          color: var(--ti-color-disable-r);
+          background-color: var(--ti-color-disable-r);
+          color: var(--ti-color-disable);
         }
         //...................................................
       }
