--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -52,9 +52,9 @@
   --ti-color-track: #888;
   --ti-color-track-b: #a7a7a7;
   --ti-color-track-r: #fff;
-  --ti-color-disable: rgba(200, 200, 200, 0.1);
-  --ti-color-disable-b: rgba(200, 200, 200, 0.2);
-  --ti-color-disable-r: #aaa;
+  --ti-color-disable: #666;
+  --ti-color-disable-b: #666;
+  --ti-color-disable-r: rgba(200, 200, 200, 0.06);;
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
   --ti-color-text-r: #ecc4e3;
