--- a/src/lib/view/process/ti-process.scss
+++ b/src/lib/view/process/ti-process.scss
@@ -19,15 +19,21 @@
   //-------------------------------------------------------
   > .part-progress {
     flex: 0 0 auto;
-    padding: 2em 1em;
+    padding: 1em 1em .5em 1em;
     .ti-progress-bar {
       max-width: 600px;
       margin: 0 auto;
     }
   }
   //-------------------------------------------------------
+  > .part-abort {
+    @include flex-center;
+    padding: 0.4em;
+  }
+  //-------------------------------------------------------
   > .part-logs {
     @include font-fixed;
+    margin-top:1em;
     border-top: 1px dashed var(--ti-color-border-weak);
     flex: 1 1 auto;
     height: 100%;
