--- a/src/lib/shelf/block/ti-block.scss
+++ b/src/lib/shelf/block/ti-block.scss
@@ -28,8 +28,6 @@
   > .block-main-body-wrapper {
     > main {
       position: relative;
-      width: 100%;
-      height: 100%;
     }
   }
   //-----------------------------------------------------------
@@ -40,6 +38,17 @@
       position: absolute;
       inset: 0;
       overflow: hidden;
+      width: 100%;
+      height: 100%;
+    }
+  }
+  //-----------------------------------------------------------
+  &.overflow-fit > .block-main-body-wrapper {
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    > main {
+      position: relative;
       width: 100%;
       height: 100%;
     }
