done for app-tips

--- a/src/assets/style/color/light.scss
+++ b/src/assets/style/color/light.scss
@@ -61,4 +61,7 @@
   --ti-color-number: #7200cc;
   --ti-color-number-b: #8520d3;
   --ti-color-number-r: #cb9fec;
+  --ti-color-tip: #222;
+  --ti-color-tip-b: #333;
+  --ti-color-tip-r: #DDD;
 }
