--- a/src/assets/style/color/dark.scss
+++ b/src/assets/style/color/dark.scss
@@ -54,11 +54,14 @@
   --ti-color-track-r: #fff;
   --ti-color-disable: #666;
   --ti-color-disable-b: #666;
-  --ti-color-disable-r: rgba(200, 200, 200, 0.06);;
+  --ti-color-disable-r: rgba(200, 200, 200, 0.06);
   --ti-color-text: #a25791;
   --ti-color-text-b: #bd7aad;
   --ti-color-text-r: #ecc4e3;
   --ti-color-number: #7200cc;
   --ti-color-number-b: #8520d3;
   --ti-color-number-r: #cb9fec;
+  --ti-color-tip: #ddd;
+  --ti-color-tip-b: #ccc;
+  --ti-color-tip-r: #222;
 }
